@@ -10,3 +10,5 @@
 #undef HAVE_LARGE_FILE_SUPPORT
 #undef PLATFORM_WIN32
 #undef HAVE_NEW_ICONV
+#undef NAME_DEV_RANDOM
+#undef HAVE_CRYPT_RNG
